# python-bibtex-linter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
bibtex_linter/: default_rules.py  ieeetr_rules.py  ieeetran_rules.py  main.py  parser.py  verification.py
docs/: IEEEtran_best_practices.md
test/: test_parser.py  test_refs.bib  test_verification.py
test/test_template/: IEEEtr_observations.md  IEEEtran_observations.md  apalike_observations.md  ieeetran_observations.md  maximal_example_refs.bib  plain_observations.md
